clusters/pro/apps/media/jellyfin/statefulset-patch.yaml
# Use strategic Merge Patch using '$patch: merge'
# https://github.com/kubernetes/community/blob/master/contributors/devel/sig-api-machinery/strategic-merge-patch.md
$patch: merge
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: intel.feature.node.kubernetes.io/gpu
                    operator: In
                    values:
                      - 'true'
              weight: 50
            - preference:
                matchExpressions:
                  - key: custom.node.kubernetes.io/gpu
                    operator: In
                    values:
                      - 'true'
              weight: 50
