clusters/pro/apps/media/jellyfin/external-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-external-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-external
    external-dns.alpha.kubernetes.io/target: javiersant.com
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://jellyfin.javiersant.com"
    gethomepage.dev/description: Jellyfin Media Server
    gethomepage.dev/group: Media
    gethomepage.dev/icon: jellyfin.svg
    gethomepage.dev/name: Jellyfin External
    gethomepage.dev/pod-selector: ""
    gethomepage.dev/weight: 293
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.javiersant.com`)
      kind: Rule
      services:
        - kind: Service
          name: jellyfin
          port: 8096
  tls:
    secretName: wildcard-javiersant-com-tls
